--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tableau Dashboard</title>
-    <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+    <title>הטמעת לוח Tableau</title>
     <style>
         body {
-            text-align: center;
             font-family: Arial, sans-serif;
+            text-align: right;
+            direction: rtl;
+            margin: 0;
+            padding: 20px;
+            background-color: #f5f5f5;
         }
-        #vizContainer {
-            width: 90%;
-            height: 600px;
-            margin: auto;
+        h1 {
+            color: #333;
+        }
+        .tableau-container {
+            max-width: 1000px;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
-    <h1>Tableau Dashboard</h1>
-    <div id="vizContainer"></div>
-
-    <script>
-        let viz;
-        function initViz() {
-            let containerDiv = document.getElementById("vizContainer");
-            let url = "https://public.tableau.com/views/salesyanai/Dashboard1";
-            let options = {
-                width: "100%",
-                height: "600px"
-            };
-            viz = new tableau.Viz(containerDiv, url, options);
-        }
-        window.onload = initViz;
-    </script>
+    <h1>לוח נתוני מכירות</h1>
+    <p>להלן לוח הבקרה ממקור Tableau Public:</p>
+    <div class="tableau-container">
+        <iframe 
+            src="https://public.tableau.com/views/salesyanai/Dashboard1?:language=en-US&:embed=y&:display_count=n&:origin=viz_share_link" 
+            width="1000" 
+            height="800" 
+            frameborder="0">
+        </iframe>
+    </div>
 </body>
 </html>
