--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>הטמעת לוח Tableau</title>
+    <title>לוח נתוני מכירות - GitHub Pages</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,10 +25,15 @@
 </head>
 <body>
     <h1>לוח נתוני מכירות</h1>
-    <p>להלן לוח הבקרה ממקור Tableau Public:</p>
+    <p>להלן לוח הבקרה ממקור Tableau Public המוטמע ב-GitHub Pages:</p>
     <div class="tableau-container">
-        <div id="tableauViz"></div>
-        <script type="text/javascript" src="https://public.tableau.com/javascripts/api/viz_v1.js"></script>
-        <script type="text/javascript">
-            function initViz() {
-                var containerDiv
+        <iframe 
+            src="https://public.tableau.com/views/salesyanai/Dashboard1?:embed=y&:showVizHome=no&:toolbar=no&:tabs=no" 
+            width="100%" 
+            height="800px" 
+            frameborder="0" 
+            allowfullscreen>
+        </iframe>
+    </div>
+</body>
+</html>
