--- a/index.html
+++ b/index.html
@@ -3,37 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>לוח נתוני מכירות - GitHub Pages</title>
+    <title>דף ראשי מעוצב - גוונים ורודים</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: right;
-            direction: rtl;
             margin: 0;
-            padding: 20px;
-            background-color: #f5f5f5;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #f5b7b1, #f06292);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            direction: rtl;
         }
+
         h1 {
-            color: #333;
+            color: #fff;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            margin-bottom: 40px;
         }
-        .tableau-container {
-            max-width: 100%;
-            height: auto;
-            margin: 0 auto;
+
+        .button-container {
+            display: flex;
+            gap: 20px;
+        }
+
+        .button {
+            padding: 15px 40px;
+            font-size: 18px;
+            color: #fff;
+            background: #ec407a;
+            border: none;
+            border-radius: 50px;
+            text-decoration: none;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .button:hover {
+            background: #d81b60;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .button:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.8em;
+            }
+
+            .button {
+                padding: 12px 30px;
+                font-size: 16px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>לוח נתוני מכירות</h1>
-    <p>להלן לוח הבקרה ממקור Tableau Public המוטמע ב-GitHub Pages:</p>
-    <div class="tableau-container">
-        <iframe 
-            src="https://public.tableau.com/views/salesyanai/Dashboard1?:embed=y&:showVizHome=no&:toolbar=no&:tabs=no" 
-            width="100%" 
-            height="800px" 
-            frameborder="0" 
-            allowfullscreen>
-        </iframe>
+    <h1>ברוכים הבאים לדף הראשי</h1>
+    <div class="button-container">
+        <a href="https://www.google.com" class="button">רווחים</a>
+        <a href="https://www.wikipedia.org" class="button">מכירות</a>
     </div>
 </body>
 </html>
