--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>דף ראשי מעוצב - גוונים ורודים</title>
+    <title>דף ראשי</title>
     <style>
         body {
             margin: 0;
@@ -67,8 +67,8 @@
 <body>
     <h1>ברוכים הבאים לדף הראשי</h1>
     <div class="button-container">
-        <a href="https://www.google.com" class="button">רווחים</a>
-        <a href="https://www.wikipedia.org" class="button">מכירות</a>
+        <a href="https://public.tableau.com/app/profile/yanai.shulimovich/viz/profitsales_17441366818120/sheet8?publish=yes " class="button">רווחים</a>
+        <a href="https://public.tableau.com/app/profile/yanai.shulimovich/viz/profitsales_17441366818120/sheet7?publish=yes" class="button">מכירות</a>
     </div>
 </body>
 </html>
